--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="/">LLS</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -21,16 +21,15 @@
             href="#"
             role="button"
             data-bs-toggle="dropdown"
-            >Dropdown</a
+            >Manage Users</a
           >
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="#">Create User</a></li>
+            <li><a class="dropdown-item" href="#">Retrieve User</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/contactUs">Contact Us</a>
         </li>
       </ul>
     </div>
