MASSIVE CHANGES POGPOGPOGPO

--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -1,6 +1,7 @@
 <!-- FILEPATH: /c:/Users/limkl/OneDrive/Desktop/appdev/templates/contactUs.html -->
-{% extends "base.html" %} {% block title %} BASE PROJECT {% endblock %} {% block
-content %}
+{% extends "base.html" %} 
+{% block title %} BASE PROJECT {% endblock %} 
+{% block content %}
 <h1 class="display">Contact Us</h1>
 <!-- Nav tabs -->
 <ul class="nav nav-tabs">
@@ -74,7 +75,7 @@ content %}
 
   <div class="tab-pane container-fluid fade active" id="DSF">
     <br />
-    <h2>IT1166 App Development Project</h2>
+    <h2>IT1566 App Development Project</h2>
     <br />
     <table class="table table-striped">
       <thead>
@@ -125,7 +126,7 @@ content %}
 
   <div class="tab-pane container-fluid fade active" id="DCS">
     <br />
-    <h2>IT1166 App Development Project</h2>
+    <h2>IT1666 App Development Project</h2>
     <br />
     <table class="table table-striped">
       <thead>
@@ -167,7 +168,7 @@ content %}
 
   <div class="tab-pane container-fluid fade active" id="DBFT">
     <br />
-    <h2>IT1166 App Development Project</h2>
+    <h2>IT1866 App Development Project</h2>
     <br />
     <table class="table table-striped">
       <thead>
@@ -209,7 +210,7 @@ content %}
 
   <div class="tab-pane container-fluid fade active" id="CIP">
     <br />
-    <h2>IT1166 App Development Project</h2>
+    <h2>IT1966 App Development Project</h2>
     <br />
     <table class="table table-striped">
       <thead>
