--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -21,11 +21,35 @@
             href="#"
             role="button"
             data-bs-toggle="dropdown"
+            >Manage Customers</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="/createCustomer"
+                >Create Customer</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="/retrieveCustomers"
+                >Retrieve Customers</a
+              >
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
             >Manage Users</a
           >
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Create User</a></li>
-            <li><a class="dropdown-item" href="#">Retrieve User</a></li>
+            <li><a class="dropdown-item" href="/createUser">Create User</a></li>
+            <li>
+              <a class="dropdown-item" href="/retrieveUsers">Retrieve User</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
