--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,5 @@
-{% extends "base.html" %}
-{% block title %}BASE PROJECT{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}BASE PROJECT{% endblock %} {% block
+content %}
 <h1 class="display-4">Home</h1>
 <p>FLASKKKKKKKKKKK!!!!!!!!!!!!!!!!!!!</p>
 {% endblock %}
