--- a/templates/retrieveUsers.html
+++ b/templates/retrieveUsers.html
@@ -45,9 +45,40 @@ Users{% endblock %} {% block content %}
           >
         </td>
         <td>
-          <form action="" method="POST">
-            <input type="submit" value="Delete" class="btn btn-danger" />
-          </form>
+          <form
+            action="{{url_for('delete_user', id=user.get_user_id())}}"
+            method="POST">
+          {# <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete {{user.get_first_name()}} {{user.get_last_name()}}?');">#}
+          <!-- Button to Open the Modal -->
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#myModal_{{user.get_user_id()}}">
+  Delete
+</button>
+
+<!-- The Modal -->
+<div class="modal" id="myModal_{{user.get_user_id()}}">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Delete Confirmation</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Are you sure you want to delete {{user.get_first_name()}} {{user.get_last_name()}}?
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <input type="submit" value="Delete" class="btn btn-danger">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      </div>
+
+    </div>
+  </div>
+</div>
         </td>
       </tr>
       {% endfor %}
